chore: css modified

--- a/client/src/pages/unauthorized/login/login.css
+++ b/client/src/pages/unauthorized/login/login.css
@@ -37,6 +37,7 @@ input {
   border: none;
   outline: none;
   border-radius: 5px;
+  font-size: small;
 }
 button {
   width: 60%;
@@ -78,4 +79,15 @@ button:hover {
 }
 #chk:checked ~ .signup label {
   transform: translateY(-20px) scale(0.6);
+}
+
+.loginLayout {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: "Jost", sans-serif;
+  background: linear-gradient(to bottom, #2f2f74, #5a52a5, #a89cff);
 }
