--- a/client/src/pages/unauthorized/login/login.css
+++ b/client/src/pages/unauthorized/login/login.css
@@ -1,4 +1,4 @@
-.main {
+.mainLogin {
   width: 350px;
   height: 500px;
   background: red;
@@ -16,7 +16,7 @@
   width: 100%;
   height: 100%;
 }
-label {
+.auth-label {
   color: #fff;
   font-size: 2.3em;
   justify-content: center;
@@ -26,7 +26,7 @@ label {
   cursor: pointer;
   transition: 0.5s ease-in-out;
 }
-input {
+.auth-input {
   width: 60%;
   height: 10px;
   background: #e0dede;
@@ -39,7 +39,7 @@ input {
   border-radius: 5px;
   font-size: small;
 }
-button {
+.auth-button {
   width: 60%;
   height: 40px;
   margin: 10px auto;
@@ -56,7 +56,7 @@ button {
   transition: 0.2s ease-in;
   cursor: pointer;
 }
-button:hover {
+.auth-button:hover {
   background: #6d44b8;
 }
 .login {
@@ -66,7 +66,7 @@ button:hover {
   transform: translateY(-180px);
   transition: 0.8s ease-in-out;
 }
-.login label {
+.login .auth-label {
   color: #573b8a;
   transform: scale(0.6);
 }
@@ -74,10 +74,10 @@ button:hover {
 #chk:checked ~ .login {
   transform: translateY(-500px);
 }
-#chk:checked ~ .login label {
+#chk:checked ~ .login .auth-label {
   transform: scale(1);
 }
-#chk:checked ~ .signup label {
+#chk:checked ~ .signup .auth-label {
   transform: translateY(-20px) scale(0.6);
 }
 
